Little additions in 1.1 and 1.2

--- a/younotes1/2.1-functions-epimorphisms.html
+++ b/younotes1/2.1-functions-epimorphisms.html
@@ -44,9 +44,12 @@
 <!-- ********************************************************************************* -->
 <h2>Functions</h2>
 
+<!-- ************************************* -->
+<h3>Relations</h3>
+
 Functions are defined in mathematics as a special kind of <b>relation</b>.
 <br>We place ourselves in set theory, not in <b><code>Set</code></b> category (because in category theory, we don't know about the elements).
-<br>So a relation is a subset of pairs of elements. The set of all pairs form a <b></b>.
+<br>So a relation is a subset of pairs of elements. The set of all pairs form a <b>cartesian product</b>.
 <br>Any substet of this cartesian product is a relation by definition. Without any other requirement.
 
 <img class="margin border" src="img/relation.jpg" alt="Relation">
@@ -54,14 +57,19 @@ Functions are defined in mathematics as a special kind of <b>relation</b>.
 A relation doesn't have to be symetric.
 <br>An element of <code>S<sub>1</sub></code> can be mapped to several elements of <code>S<sub>2</sub></code>.
 <br>Several elements of <code>S<sub>1</sub></code> can be mapped to the same element of <code>S<sub>2</sub></code>.
-<br>
-<br>Functions have direction.
+
+<!-- ************************************* -->
+<h3>Functions</h3>
+Relations don't have directionality.
+<br><b>But functions have direction</b>.
 <br>We have a relation <i>between <code>S<sub>1</sub></code> and <code>S<sub>2</sub></code></i>,
-<br>but we have a function <i>from <code>S<sub>1</sub></code> to <code>S<sub>2</sub></code></i>.
+<br>But we have a function <i>from <code>S<sub>1</sub></code> to <code>S<sub>2</sub></code></i>.
 <br>
-<br>One argument of a function cannot be mapped into several elements.
+<br>A function is a special kind of relation :
+<br><b>One argument of a function cannot be mapped into several elements</b>.
+<br>That's where the directionality comes from.
 <br>But it's ok for several arguments of a function to be mapped to the same value.
-<br>If we consider total functions, all the elements of <code>S<sub>1</sub></code> must be mapped to elements of <code>S<sub>2</sub></code>. But not all elements of <code>S<sub>2</sub></code> need to be mapped by the function
+<br>If we consider total functions, all the elements of <code>S<sub>1</sub></code> must be mapped to elements of <code>S<sub>2</sub></code>. But not all elements of <code>S<sub>2</sub></code> need to be mapped by the function.
 
 <img class="margin border" src="img/function.jpg" alt="Function">
 
