Clean xhtml, convert to html5

--- a/younotes1/3.2-kleisli-category.html
+++ b/younotes1/3.2-kleisli-category.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>3.2: Kleisli category | Categories Bartosz Milewski Youtube notes</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="copyright" href="http://www.gnu.org/copyleft/gpl.html"/>
@@ -40,8 +40,8 @@ This deals with an interesting case to study.
 <br>This is not a total order because there may exist disjoint sets or sets that partially overlap.
 <br>We can have a diamond situation : 
 <div class="flex-wrap">
-    <img class="margin border" src="img/diamond1.jpg" alt="" />
-    <img class="margin border" src="img/diamond2.jpg" alt="" />
+    <img class="margin border" src="img/diamond1.jpg" alt="">
+    <img class="margin border" src="img/diamond2.jpg" alt="">
 </div>
 
 We have a category based on sets where the arrows are not functions, but relations. Some versions of this category is used in modeling topology ; open sets have this property of inclusion.
