--- a/younotes1/4.2-products.html
+++ b/younotes1/4.2-products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>4.2: Products | Categories Bartosz Milewski Youtube notes</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="copyright" href="http://www.gnu.org/copyleft/gpl.html"/>
@@ -119,7 +119,7 @@ We say that <code>c</code> is better than <code>c'</code> if there is a unique m
 <br>The definition of product is :
 
 <div class="flex-wrap">
-    <img class="margin border" src="img/product4.jpg" alt="Cartesian product 4" />
+    <img class="margin border" src="img/product4.jpg" alt="Cartesian product 4">
     
     <div class="inline-block border margin padding">
         A categorical product of two objects <code>a</code> and <code>b</code> is a third object <code>c</code> with two projections
