--- a/younotes1/5.1-coproducts-sum-types.html
+++ b/younotes1/5.1-coproducts-sum-types.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>5.1: Coproducts, sum types | Categories Bartosz Milewski Youtube notes</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="copyright" href="http://www.gnu.org/copyleft/gpl.html"/>
