--- a/younotes1/8.1-function-objects-exponentials.html
+++ b/younotes1/8.1-function-objects-exponentials.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>8.1: Function objects, exponentials | Categories Bartosz Milewski Youtube notes</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="copyright" href="http://www.gnu.org/copyleft/gpl.html"/>
