Change url of git repository

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <div class="dejavu">
 Started in 2018 by Thierry Graff.
 <br>There are notes until part I, chapter 7.2 ; for the moment, I stopped watching the videos (because I bought the book).
-<br>You can download these notes from the git repository : <a href="https://gitea.larzac.info/tig12/categories">gitea.larzac.info/tig12/categories</a>.
+<br>You can download these notes from the git repository : <a href="https://gitea.tig12.net/tig12/categories">gitea.larzac.info/tig12/categories</a>.
 <br>
 <br>The notes are written in english but I use french conventions for capitalization and spaces.
 <br>- The characters <code>; : ? !</code> are preceeded and followed by a white space.</li>
