Remove favicon broken links

--- a/younotes1/2.1-functions-epimorphisms.html
+++ b/younotes1/2.1-functions-epimorphisms.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title>2.1: Functions, epimorphisms | Categories Bartosz Milewski Youtube notes</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="copyright" href="http://www.gnu.org/copyleft/gpl.html"/>
     <link href="../static/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -117,7 +116,7 @@ If we use Haskell notation :
     <li>
         If a function collapses several elements of <code>a</code> to the same element of <code>b</code>.
         <img class="margin border" src="img/function-non-injective.jpg" alt="Non injective function">
-        For example function <code>isEven()</code>, which asociates a boolean to an integer.
+        For example function <code>isEven()</code>, which asociates a integer to a boolean.
         <br>This corresponds to the process of abstraction : we loose information about which element generated <code>y</code>, we leave the details to keep only the information that interests us.
     </li>
     <li>
