--- a/younotes1/3.1-examples-orders-monoids.html
+++ b/younotes1/3.1-examples-orders-monoids.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title>3.1: Examples of categories, orders, monoids | Categories Bartosz Milewski Youtube notes</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="copyright" href="http://www.gnu.org/copyleft/gpl.html"/>
     <link href="../static/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -74,7 +73,7 @@ We only require composition : if <code>a &le; b</code> and <code>b &le; c</code>
 <img class="margin border" src="img/preorder.jpg" alt="Preorder">
 
 In a preorder, there is either one arrow or no arrow between two objects. There cannot be multiple arrows between two objects.
-<br>Between two osbjects means starting from one object and ending to an other object. In principle we can have an arrow going backwards too.
+<br>Between two objects means starting from one object and ending to an other object. In principle we can have an arrow going backwards too.
 <br>
 <br>Associativity is obvious.
 <br>
